# tinystories-gpt2-from-scratch

./: .gitignore  GPT.py  README.md  app.py  hf_model.py  pyproject.toml
